<resources>
    <string name="app_name">Work scheduler</string>
    <string name="calendar">Calendar</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="change_color">Change color</string>
    <string name="send_email">Send email</string>
    <string name="export_to_calendar">Export to calendar</string>
    <string name="default_time_settings">Default times</string>
    <string name="set_default_time_start">I usually start at </string>
    <string name="set_default_time_end">I usually finish at</string>
    <string name="default_color_settings">Default colors</string>
    <string name="select_default_background_color">Set date background color</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="email_settings">Email</string>
    <string name="set_recipient">Set the recipient</string>
    <string name="set_subject">Set the subject</string>
    <string name="hourly_payment_settings">Hourly payment</string>
    <string name="set_payment_weekdays">Set the payment on weekdays</string>
    <string name="set_payment_weekends">Set the payment on weekends</string>
    <string name="colorpicker_custom_buttom">Custom</string>
    <string name="colorpicker_selected_button">Select</string>
    <string name="colorpicker_presets_button">Presets</string>
    <string name="ok">Ok</string>
    <string name="new_event">New event</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="event_color">Event color</string>
    <string name="set_name_of_events">Set the name of events</string>
    <string name="choose_destination_calendar">Choose the destination calendar</string>
    <string name="request_read_calendar_permission">Calendar access is required to display the local calendars.</string>
    <string name="permission_not_available_read_calendar">Permission is not available. Requesting calendar permission.</string>
    <string name="permission_granted_calendar">Calendar permission was granted.</string>
    <string name="permission_denied_calendar">Calendar permission request was denied.</string>
    <string name="event">Event</string>
    <string name="export_are_you_sure">"Are you sure to export events of %1$s to %2$s calendar?"</string>
    <string name="no_chosen_calendar">No destination calendar, please visit settings first!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="export_successful">Successfull export to calendar</string>
    <string name="undo">Undo</string>
    <string name="export_unsuccessful">Unsuccessfull export to calendar</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="worked_days">Worked days</string>
    <string name="unsuccessful_event_adding">Unsuccessfull event adding, second time can not be earlier than first!</string>
    <string name="income">Income</string>
    <string name="income_weekdays">Income on weekdays</string>
    <string name="income_weekends">Income on weekends</string>
    <string name="choose_the_months">Choose the months</string>
    <string name="worked_hours_on_weekdays">Worked hours on weekdays</string>
    <string name="worked_hours_on_weekends">Worked hours on weekends</string>
    <string name="total_worked_hours">Total worked hours</string>
    <string name="income_on_weekday">Income on weekday</string>
    <string name="income_on_weekends">Income on weekends</string>
    <string name="total_income">Total income</string>

</resources>
