<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.matefelegyhazy.workscheduler.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/contentMargin"
        android:layout_marginBottom="0dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_the_months"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
        
        <com.thomashaertel.widget.MultiSpinner
            android:id="@+id/multiSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/worked_hours_on_weekdays"
        style="@style/com.matefelegyhazy.workscheduler.Category"/>

    <TextView
        android:id="@+id/tvWeekdaySumHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/com.matefelegyhazy.workscheduler.Value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worked_hours_on_weekends"
        style="@style/com.matefelegyhazy.workscheduler.Category"/>

    <TextView
        android:id="@+id/tvWeekendSumHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/com.matefelegyhazy.workscheduler.Value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_worked_hours"
        style="@style/com.matefelegyhazy.workscheduler.Category"/>

    <TextView
        android:id="@+id/tvSumHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/com.matefelegyhazy.workscheduler.Value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income_on_weekday"
        style="@style/com.matefelegyhazy.workscheduler.Category"/>

    <TextView
        android:id="@+id/tvWeekdayIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/com.matefelegyhazy.workscheduler.Value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income_on_weekends"
        style="@style/com.matefelegyhazy.workscheduler.Category"/>

    <TextView
        android:id="@+id/tvWeekendIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/com.matefelegyhazy.workscheduler.Value"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_income"
        style="@style/com.matefelegyhazy.workscheduler.Category"/>

    <TextView
        android:id="@+id/tvSumIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/com.matefelegyhazy.workscheduler.Value"/>

</LinearLayout>